--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,4 +20,5 @@ jobs:
           java-version: '17'
 
       - name: Run tests
+        working-directory: bank-application
         run: mvn clean test
