--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Maven CI
+name: Maven CI Extended
 
 on:
   push:
@@ -22,3 +22,14 @@ jobs:
       - name: Run tests
         working-directory: bank-application
         run: mvn clean test
+
+      - name: Package application
+        working-directory: bank-application
+        run: mvn package
+
+      - name: Upload build artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: maven-build
+          working-directory: bank-application
+          path: target/
